feat: add Java 17 support (#4206)
* build: updated bundle execution environment MANIFEST headers

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(target-platform): updated build plugins and collected versions in properties

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(target-platform): updated GWT to 2.10.0

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(target-platform): updated Jetty

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

refactor(target-platform): removed unused slf4j.jdk14.version

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(target-platform): updated osgi.annotation.version since lower version caused erros in main build

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(target-platform): updated log4j and slf4j

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(kura): updated log4j and restricted slf4j in range [1.7.36,1.8.0) since log4j 2.x is not compatible with slf4j >= 1.8

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(kura): commented kura-p2 module, updated plugins versions, replaced deprecated tycho config

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(kura): disabled modules dependent on Nashorn JS engine

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build: commented with TODO the parts that have to be developed further

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(raspberry-pi): updated the raspberry-pi profile to use Java 17

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

build(features): replaced legacy plugin

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

refactor(kura/pom): refactor to use properties for plugins 